--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
@@ -76,8 +76,9 @@
 .eaton-search--default :-moz-placeholder { /* Firefox 18- */ color: #FFF; }
 
 @media screen and (max-width: 479px) { .eaton-search--default .eaton-search--default__form-input:valid + .eaton-search--default__form-mobile-label { display: none; }
-  .eaton-search--default__form-mobile-label { position: absolute; width: 100%; padding-right: 32px; color: #FFF; pointer-events: none; line-height: normal; left: 0; top: 0; display: table; height: 46px; }
+  .eaton-search--default__form-mobile-label { position: absolute; width: 100%; padding-right: 32px; color: #FFF; pointer-events: none; line-height: normal; left: 0; top: 0; display: table; height: 46px; font-size: 2rem; }
   .eaton-search--default__form-mobile-label.with-external { padding-right: 87px; }
+  .eaton-search--default__form-mobile-label.u-visible-mobile { padding-top: 10px; }
   .eaton-search--default__form-mobile-label span { display: table-cell; text-align: left; vertical-align: middle; }
   .eaton-search--default ::-webkit-input-placeholder { /* Chrome/Opera/Safari */ color: transparent; }
   .eaton-search--default ::-moz-placeholder { /* Firefox 19+ */ color: transparent; }
