--- a/eaton.frontend/src/components/ttil-list/css/views/_view-image-only.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-image-only.scss
@@ -66,7 +66,7 @@
     &__container {
       display: flex;
       flex-wrap: wrap;
-      align-items: center;
+      // align-items: center;
     }
 
     &__item {
