[Product-Detail-Card] Add missing Title and description to Related Products Carousel

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-detail-card/css/product-detail-card.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-detail-card/css/product-detail-card.css
@@ -12,3 +12,7 @@
 
 
 .eaton-product-detail-card { margin-bottom: 60px; }
+
+.product-detail-card__related-products-header { padding-left: 15px; margin-bottom: 45px; }
+
+.product-detail-card__related-products-description { margin-top: 10px; }
