--- a/eaton.frontend/src/components/product-detail-card/css/product-detail-card.scss
+++ b/eaton.frontend/src/components/product-detail-card/css/product-detail-card.scss
@@ -11,3 +11,16 @@
   margin-bottom: 60px;
 
 }
+
+.product-detail-card {
+
+  &__related-products-header {
+    padding-left: 15px;
+    margin-bottom: 45px;
+  }
+
+  &__related-products-description {
+    margin-top: 10px;
+  }
+
+}
