[List-Text-Only-3-Columns] Fix Is not possible to click the cards + Padding issues -  Fix file indentation in Data model

--- a/eaton.frontend/src/components/list/css/views/_view-text-only-3-column.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-text-only-3-column.scss
@@ -31,7 +31,7 @@
 
     &::before {
       content: '';
-      border-color: $color__primary-blue;
+      background-color: $color__primary-blue;
       display: block;
       height: 4px;
       width: 60px;
