--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -221,7 +221,7 @@
 
 .text-only-3-column__article-copy { padding: 15px 50px 15px 0; position: relative; }
 
-.text-only-3-column__article-copy::before { content: ''; border-color: #005EB8; display: block; height: 4px; width: 60px; position: absolute; top: 0; left: 0; }
+.text-only-3-column__article-copy::before { content: ''; background-color: #005EB8; display: block; height: 4px; width: 60px; position: absolute; top: 0; left: 0; }
 
 .text-only-3-column__card { position: relative; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; }
 
