--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-featured-story.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-featured-story.html
@@ -15,8 +15,7 @@
             <div class="featured-story-component__content">
               <p class="featured-story-component__title b-eyebrow-large">${component.title}</p>
               <a class="featured-story-component__link" href="${component.link}">
-                <h2 class="featured-story-component__text">${component.text}
-                  <i aria-hidden="true" class="featured-story-component__arrow glyphicon glyphicon-menu-right arrow"></i></h2>
+                <h2 class="featured-story-component__text">${component.text}</i></h2>
               </a>
             </div>
           </div>
