--- a/eaton.frontend/src/components/ttil-list/css/views/_view-featured-story.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-featured-story.scss
@@ -22,7 +22,7 @@
     }
   }
 
-  &__arrow {
+  &__arrow::before {
     font-size: 0.7em;
     left: 10px;
   }
@@ -39,6 +39,16 @@
       text-decoration: none;
       color: $color__white;
     }
+  }
+
+  &__link h2.featured-story-component__text::after{
+    color: $color__white;
+    margin-left: 20px;
+    content: "\e258";
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 2.4rem;
   }
 
   &__blue {
