[List] view Default - Fix issue with the background of the cards in tablet breakpoint

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -100,7 +100,7 @@
 
 .listdefault__card .rendition img { width: 100%; }
 
-.listdefault__content { padding: 30px 30px 15px 30px; }
+.listdefault__content { padding: 30px 30px 15px 30px; background: #FFF; }
 
 @media screen and (max-width: 767px) { .listdefault__slides { display: block; }
   .listdefault__image { width: 100%; }
