--- a/eaton.frontend/src/components/list/css/views/_view-text-only-3-column.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-text-only-3-column.scss
@@ -1,3 +1,6 @@
+//-----------------------------------
+// Module M-32 - Related Items - Text Only (Text-Only 3-Col)
+//-----------------------------------
 .text-only-3-column {
 
   padding-top: 60px;
@@ -9,10 +12,9 @@
 
   &__cta {
     display: block;
-    z-index: 10;
   }
 
-  .b-eyebrow-small {
+  &__eyebrow {
     padding: 0;
   }
 
@@ -26,7 +28,7 @@
   }
 
   &__article-copy {
-    padding: 15px 50px 15px 0;
+    padding: 16px 50px 15px 0;
     position: relative;
 
     &::before {
@@ -34,7 +36,7 @@
       background-color: $color__primary-blue;
       display: block;
       height: 4px;
-      width: 60px;
+      width: 50px;
       position: absolute;
       top: 0;
       left: 0;
@@ -54,7 +56,18 @@
 
   &__title {
     color: $color__primary-blue;
+    margin: 0;
   }
+
+
+  &__slides {
+    padding-left: 15px;
+
+    .slick-active button {
+      background-color: $color__primary-blue;
+    }
+  }
+
 
 
 
@@ -70,8 +83,12 @@
       padding-bottom: 20px;
     }
 
-    .b-eyebrow-small {
-      padding-bottom: 30px;
+    &__eyebrow {
+      margin-bottom: 20px; // Visually 30px spacing
+    }
+
+    &__date {
+      margin-top: 5px;
     }
 
   }
@@ -87,20 +104,20 @@
       padding-bottom: 10px;
     }
 
-    .b-eyebrow-small {
-      padding: 15px 0 30px 0;
+    &__article {
+      padding-top: 30px;
     }
 
-    &__date {
-      padding-top: 8px;
+    &__article-copy {
+      padding-bottom: 45px;
     }
 
     &__description {
       padding-bottom: 15px;
     }
 
-    &__article {
-      padding-top: 30px;
+    &__date {
+      margin-top: 5px;
     }
 
     &__cta-container {
@@ -110,13 +127,21 @@
   }
 
 
-}
+  //-----------------------------------
+  // MediaQuery: > 992px and up
+  //-----------------------------------
+  @include media-desktop-and-up {
+    &__article-copy {
+      padding: 30px 50px 15px 0;
+    }
 
-.text-only-3-column__slides {
-  padding-left: 15px;
+    &__eyebrow {
+      margin-bottom: 45px; // Visually, 60px spacing
+    }
 
-  .slick-active button {
-    background-color: $color__primary-blue;
+    &__date {
+      margin-top: 15px; // Visually, 30px Spacing
+    }
   }
 
 }
