--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-2-column.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-2-column.html
@@ -1,37 +1,58 @@
-<div class="eaton-list-component text-only-2-column container" data-sly-use.data="${'../data/view-text-only-2-column.js' @testdata=properties.testdata}">
-    <div class="row">
+<!--/*
+  Module M-26 - Article List: No Feature
+*/-->
+<sly data-sly-use.data="${'../data/view-text-only-2-column.js' @testdata=properties.testdata}">
 
+  <div class="text-only-2-column">
+    <div class="container">
 
-<div class="col-xs-12">
-<h2 class="b-heading-h2">${data.title}</h2>
-<p class="text-only-2-column__description">${data.description}</p>
-</div>
-</div>
-    <div class="row">
-        <div class="text-only-2-column__card" data-sly-list.card="${data.cards}">
-            <div class="col-xs-12 col-md-6 text-only-2-column__article">
+      <!--/* Component header */-->
+      <div data-sly-test="${ data.title || data.description }" class="row">
+        <div class="col-xs-12">
+          <h2 data-sly-test="${ data.title }"
+            class="text-only-2-column__heading b-heading-h2"
+          >${ data.title }</h2>
 
-            <a href="${data.single_feature_card.cta.url}" target="${data.single_feature_card.cta.target}" class="article-list-single-feature__link">
-                <span class="article-list-single-feature--border"></span>
-                <div class="article-list-single-feature__article--copy">
-                    <p class="b-eyebrow-small">${card.title}</p>
-                    <p class="b-heading-h4">${card.text}</p>
-                    <p class="category-item-date"><em>${card.date_text}</em></p>
-                </div>
-            </a>
+          <p data-sly-test="${ data.description }"
+            class="text-only-2-column__description"
+          >${ data.description }</p>
         </div>
+      </div>
+
+      <!--/* Component Content */-->
+      <div class="row">
+        <div data-sly-list.card="${ data.cards }"
+          class="text-only-2-column__card">
+          <div class="col-xs-12 col-md-6">
+            <div class="text-only-2-column__article-copy">
+
+              <div class="text-only-2-column__eyebrow b-eyebrow-small">${ card.title }</div>
+
+              <h3 class="text-only-2-column__title b-heading-h4">
+                <a href="${ card.cta.url }"
+                  target="${ card.cta.target }"
+                  class="text-only-2-column__cta"
+                >${ card.text }</a>
+              </h3>
+
+              <div data-sly-test="${ card.date_text }" class="text-only-2-column__date">
+                <em>${ card.date_text }</em>
+              </div>
+
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
 
-
-   <!--/* Bottom CTA */-->
-    <div class="row">
+      <!--/* Bottom CTA */-->
+      <div class="row">
         <div class="col-xs-12 text-center text-only-2-column__cta-container">
-            <sly data-sly-resource="${'cta' @ resourceType='/apps/eaton/static-components/general/cta'}"></sly>
+          <sly data-sly-resource="${'cta' @ resourceType='/apps/eaton/static-components/general/cta'}"></sly>
         </div>
-    </div>
+      </div>
 
 
     </div>
+  </div>
 
-
+</sly>
