--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-3-column.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-3-column.html
@@ -1,31 +1,37 @@
+<!--/*
+  Module M-32 - Related Items - Text Only
+*/-->
 <sly data-sly-use.data="${'../data/view-text-only-3-column.js' @testdata=properties.testdata}">
 
   <div class="text-only-3-column">
     <div class="container">
+
+      <!--/* Component Header */-->
       <div data-sly-test="${ data.title }" class="row">
         <div class="col-xs-12">
           <h2 class="text-only-3-column__heading b-heading-h2">${ data.title }</h2>
         </div>
       </div>
 
+      <!--/* Component Content */-->
       <div class="row">
         <ul data-sly-list.card="${ data.cards }"
           class="text-only-3-column__slides">
           <li class="slides text-only-3-column__card">
-            <a href="${ card.cta.url }"
-              target="${ cta.target }"
-              class="text-only-3-column__cta u-absolute-fill">
-              <span class="sr-only">${ card.text }</span>
-            </a>
+
             <div class="text-only-3-column__article-copy">
-              <p class="text-only-3-column__eyebrow b-eyebrow-small">${ card.title }</p>
-              <p class="text-only-3-column__title b-heading-h5">${ card.text }</p>
-              <p data-sly-test="${ card.date_text }"
-                class="text-only-3-column__date">
+              <div class="text-only-3-column__eyebrow b-eyebrow-small">${ card.title }</div>
+              <h3 class="text-only-3-column__title b-heading-h5">
+                <a href="${ card.cta.url }"
+                  target="${ cta.target }"
+                  class="text-only-3-column__cta">
+                  ${ card.text }</a>
+              </h3>
+              <div data-sly-test="${ card.date_text }" class="text-only-3-column__date">
                 <em>${ card.date_text }</em>
-              </p>
+              </div>
             </div>
-            </a>
+
           </li>
         </ul>
 
