[EATON-604][EATON-598] FIX - Spacing Between Tile Links and 3-Column Text Only

--- a/eaton.frontend/src/components/ttil-list/css/views/_view-tile-links.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-tile-links.scss
@@ -1,7 +1,7 @@
 .tile-link-component {
 
   margin-top: 60px;
-  margin-bottom: 60px;
+  margin-bottom: 0; // NOTE: Remove bottom margin since each '&__element' already has bottom margin
 
   &__container {
 
@@ -152,4 +152,3 @@
     }
   }
 }
-
