--- a/eaton.frontend/src/global/css/base/elements/forms/_form.scss
+++ b/eaton.frontend/src/global/css/base/elements/forms/_form.scss
@@ -64,6 +64,7 @@
       text-align: left;
       padding: 0;
       margin-bottom: 30px;
+      white-space: inherit;
 
       @include media-tablet-and-up {
         font-size: 2.6rem;
@@ -156,6 +157,11 @@
 
         @include media-mobile-only {
           width: 50%;
+        }
+
+        //media query for XP screens
+        @media screen and ( max-width: 320px ) {
+          width: 100%;
         }
       }
 
