--- a/eaton.frontend/src/components/back-to-search/css/back-to-search.scss
+++ b/eaton.frontend/src/components/back-to-search/css/back-to-search.scss
@@ -6,7 +6,7 @@
 @import "../../../global/css/_config/sass";
 
 .eaton-product-back-to-search {
-  margin: $spacing__sm 0;
+  margin: $spacing__sm 0 0 0;
 
   i {
     font-size: 1.1rem;
