--- a/eaton.frontend/src/components/share-cta/css/share-cta.scss
+++ b/eaton.frontend/src/components/share-cta/css/share-cta.scss
@@ -6,7 +6,7 @@
 @import "../../../global/css/_config/sass";
 
 .eaton-product-share-cta {
-  margin: $spacing__sm $spacing__sm $spacing__sm 0;
+  margin: $spacing__sm $spacing__sm 0 0;
 
   i {
     color: $color__primary-gray2;
