--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/back-to-search/css/back-to-search.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/back-to-search/css/back-to-search.css
@@ -11,7 +11,7 @@
  */
 
 
-.eaton-product-back-to-search { margin: 30px 0; }
+.eaton-product-back-to-search { margin: 30px 0 0 0; }
 
 .eaton-product-back-to-search i { font-size: 1.1rem; padding-right: 5px; }
 
