--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/live-chat-cta/css/live-chat-cta.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/live-chat-cta/css/live-chat-cta.css
@@ -11,7 +11,7 @@
  */
 
 
-.eaton-product-live-chat { margin: 30px; }
+.eaton-product-live-chat { margin: 30px; margin-bottom: 0; }
 
 .eaton-product-live-chat i { color: #5B6770; font-size: 3rem; display: inline-block; vertical-align: middle; padding-right: 10px; height: 12px; margin-top: -17px; }
 
