--- a/eaton.frontend/src/components/list/css/views/_view-text-only-3-column.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-text-only-3-column.scss
@@ -150,7 +150,7 @@
 
 
 //-----------------------------------
-// EATON-598 - Spacing between components exeptions
+// EATON-598 - Spacing between components exceptions
 //-----------------------------------
 .ttil-list + .list > .text-only-3-column {
   margin-top: 60px;
