--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-image-only.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-image-only.html
@@ -34,7 +34,7 @@
             </a>
 
             <!--/* When Image has no Headline and no URL */-->
-            <div data-sly-test="${!item.headline && item.link}" class="eaton-ttil-image-list__content">
+            <div data-sly-test="${!item.headline && !item.link}" class="eaton-ttil-image-list__content">
               <div class="eaton-ttil-image-list__image">
                 <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
                   <sly data-sly-call="${ tpl.module @ data=item.image }"></sly>
