--- a/eaton.frontend/src/shared/module-product-card/css/module-product-card.scss
+++ b/eaton.frontend/src/shared/module-product-card/css/module-product-card.scss
@@ -6,7 +6,8 @@
 @import "../../../global/css/_config/sass";
 
 .module-product-detail-card {
-  padding: 30px 0;
+  // padding: 30px 0;
+  padding-bottom: 30px;
 
   &--image-container {
     text-align: center;
