--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-card/css/module-product-card.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-card/css/module-product-card.css
@@ -11,7 +11,7 @@
  */
 
 
-.module-product-detail-card { padding: 30px 0; }
+.module-product-detail-card { padding-bottom: 30px; }
 
 .module-product-detail-card--image-container { text-align: center; }
 
