--- a/eaton.frontend/src/components/ttil/css/views/_view-topic-link-white.scss
+++ b/eaton.frontend/src/components/ttil/css/views/_view-topic-link-white.scss
@@ -62,6 +62,7 @@
       margin-bottom: 0;
       margin-right: $spacing__sm;
       display: inline-block;
+      float:left;
 
       img {
         width: 70px;
